Gestion des categories

--- a/Web/Views/Operation/Details.cshtml
+++ b/Web/Views/Operation/Details.cshtml
@@ -3,12 +3,14 @@
 @{
     ViewData["Title"] = "Details Operation";
 }
-
-<h2>Details</h2>
-
+<div class="row">
+    <div class="col-lg-12">
+        <div class="page-header">
+            <h1 id="forms">Détails opération</h1>
+        </div>
+    </div>
+</div>
 <div>
-    <h4>Operation</h4>
-    <hr />
     <dl class="dl-horizontal">
         <dt>
             @Html.DisplayNameFor(model => model.Dateoperation)
@@ -55,6 +57,6 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Edit" asp-route-id="@Model.Id">Modifier</a> |
+    <a asp-action="Index">Retour à la liste</a>
 </div>
