--- a/Web/Views/Categorie/Index.cshtml
+++ b/Web/Views/Categorie/Index.cshtml
@@ -3,9 +3,15 @@
     ViewData["Title"] = "Categories";
     @model CategorieViewModel
 }
-<h1>Liste des opérations</h1>
+<div class="row">
+    <div class="col-lg-12">
+        <div class="page-header">
+            <h1 id="forms">Liste des catégories</h1>
+        </div>
+    </div>
+</div>
 
-<table class="table">
+<table class="table table-striped table-hover">
     <thead>
         <tr>
             <th>
@@ -14,6 +20,10 @@
             <th>
                 @Html.DisplayNameFor(model => model.ListCategories.FirstOrDefault().IdTypecategorieNavigation)
             </th>
+            <th>
+                @Html.DisplayNameFor(model => model.ListCategories.FirstOrDefault().HorsStats)
+            </th>
+
         </tr>
     </thead>
     <tbody>
@@ -24,6 +34,13 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.IdTypecategorieNavigation.Libelle)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.HorsStatsString)
+            </td>
+            <td>
+                <a asp-action="Edit" asp-route-id="@item.Id">Modifier</a>
+                <a asp-action="Details" asp-route-id="@item.Id">Détails</a>
             </td>
         </tr>
 }
