--- a/Web/Views/Operation/Edit.cshtml
+++ b/Web/Views/Operation/Edit.cshtml
@@ -4,10 +4,13 @@
     ViewData["Title"] = "Modifier Operation";
 }
 
-<h2>Edit</h2>
-
-<h4>Operation</h4>
-<hr />
+<div class="row">
+    <div class="col-lg-12">
+        <div class="page-header">
+            <h1 id="forms">Modifier opération</h1>
+        </div>
+    </div>
+</div>
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Edit">
@@ -35,7 +38,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="Sens" class="control-label"></label>
-                <input asp-for="Sens" class="form-control" />
+                <input asp-for="SensString" class="form-control" />
                 <span asp-validation-for="Sens" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -49,14 +52,14 @@
                 <span asp-validation-for="Numcompte" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-default" />
+                <input type="submit" value="Enregistrer" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Retour à la liste</a>
 </div>
 
 @section Scripts {
