--- a/Web/Views/Categorie/Edit.cshtml
+++ b/Web/Views/Categorie/Edit.cshtml
@@ -22,8 +22,8 @@
                 <span asp-validation-for="Libelle" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="HorsStats" class="control-label"></label>
-                <input asp-for="HorsStats" class="form-control" />
+                <label asp-for="HorsStats" class="control-label"></label>             
+                @Html.CheckBoxFor(model => model.HorsStats,true)                
                 <span asp-validation-for="HorsStats" class="text-danger"></span>
             </div>
             <div class="form-group">
