--- a/Web/Views/Categorie/Index.cshtml
+++ b/Web/Views/Categorie/Index.cshtml
@@ -10,7 +10,9 @@
         </div>
     </div>
 </div>
-
+<p>
+    <a asp-action="Create">Ajouter nouvelle catégorie</a>
+</p>
 <table class="table table-striped table-hover">
     <thead>
         <tr>
