Ajout Suupression catégorie

--- a/Web/Views/Categorie/Index.cshtml
+++ b/Web/Views/Categorie/Index.cshtml
@@ -43,6 +43,7 @@
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Modifier</a>
                 <a asp-action="Details" asp-route-id="@item.Id">Détails</a>
+                <a asp-action="Delete" asp-route-id="@item.Id">Supprimer</a>
             </td>
         </tr>
 }
