Affichage erreur si delete avec FK Ajout upload  + parser csv des operations banques Ajout Update sur TYPE_CATEGORIE

--- a/Web/Views/Shared/_Layout.cshtml
+++ b/Web/Views/Shared/_Layout.cshtml
@@ -25,15 +25,17 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
                 </button>
                 <a asp-area="" asp-controller="Operation" asp-action="Index" class="navbar-brand"><span><img src="../bank24.png" alt="SkalvaBank"></span> SkalvaBank</a>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li><a asp-area="" asp-controller="Operation" asp-action="Index">Operations</a></li>
+                    <li><a asp-area="" asp-controller="Operation" asp-action="Index">Operations</a></li>                    
                     <li><a asp-area="" asp-controller="Categorie" asp-action="Index">Categories</a></li>                    
                     <li><a asp-area="" asp-controller="TypeCategorie" asp-action="Index">Type categories</a></li>  
-                    <li><a asp-area="" asp-controller="AssLibCategorie" asp-action="Index">Association libelle categories</a></li>  
+                    <li><a asp-area="" asp-controller="AssLibCategorie" asp-action="Index">Association libelle categories</a></li>
+                    <li><a asp-area="" asp-controller="UploadFiles" asp-action="Index">Charger fichier</a></li>                                          
                 </ul>
             </div>
         </div>
